@@ -8,6 +8,7 @@ Unveröffentlicht:
 - README stellt klar, dass Ganzzahlen zulässig sind und Eingaben mit Dezimalkomma konsequent auf den Fallback-Wert zurückfallen.
 - Standard-Template-Parser deaktiviert während der Tokenisierung die Pathname-Expansion und verarbeitet Label-Vorgaben inklusive `*` unverändert bis in die Gerätekonfiguration; Regressionstest deckt das Literal-Szenario ab.
 - Device-Tokenisierung wertet `device`-Zeilen ohne Pathname-Expansion aus, so dass Wildcard-Literale wie `iio:device*` unverändert übernommen werden; Regressionstest schützt das Verhalten.
+- Shell-Escape-Routine für `dbus-adc.user.conf` verwendet nun `printf '%q'` für alle `USER_*`-Zuweisungen, verhindert damit jede Substitution von `$`, Backticks oder `$(...)` beim erneuten Sourcen und wird durch einen Regressionstest mit Sonderzeichen-Label abgesichert.
 
 v0.0.4:
 - Float-Validierung akzeptiert nur noch Werte mit optionalem Vorzeichen; Ganzzahlen und Dezimalwerte mit Punkt sind erlaubt, während Dezimalkomma-Eingaben zuverlässig auf den dokumentierten Vref-Fallback zurückfallen und inklusive Log-Meldung getestet werden.
